--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@
 #        )
 project(SPLCompiler CXX)
 set(CXXDEBUG "-g -Wall")
-set(CXXSTD "-std=c++17")
+set(CXXSTD "-std=c++14")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-register -O3 ${CXXDEBUG} ${CXXSTD} -I D:/winFlexBison")
 
 cmake_minimum_required(VERSION 3.12)
@@ -29,4 +29,9 @@ add_executable(SPLCompiler
         src/spl_driver.cpp
         ${FLEX_lexer_OUTPUTS}
         ${BISON_parser_OUTPUTS}
-        )
+        src/AST.cpp src/AST.h src/parse.h)
+
+target_include_directories(SPLCompiler
+        PUBLIC
+        .
+        ${CMAKE_CURRENT_SOURCE_DIR})
