--- a/test/spl_SSA_test/CMakeLists.txt
+++ b/test/spl_SSA_test/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 project(spl_SSA_test)
 
-add_executable(spl_SSA_test spl_SSA_test.cpp)
+add_executable(spl_SSA_test spl_SSA_test.cpp ../../src/spl_compiler.cpp)
 
 target_link_libraries(spl_SSA_test gtest gtest_main)
